# Learning-Kafka

./: .gitignore  README.md  compose.yml
.github/workflows/: ci.yml
consumer/: Cargo.toml  Dockerfile
consumer/src/: main.rs
producer/: producer.py
